[metadata]
name = lpmqtt
summary = Publish Launchpad Event Stream on MQTT
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    lpmqtt

[entry_points]
console_scripts =
    lpmqtt = lpmqtt.daemon:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
